--- a/src/app/event/hackathon/hackathon.component.html
+++ b/src/app/event/hackathon/hackathon.component.html
@@ -32,6 +32,7 @@
         <li>Fintech Education</li>
         <li>Smart Education</li>
         <li>Disaster management.</li>
+        <li>Student Innovation</li>
     </ul>
   </div>
 
