--- a/src/app/schedule/schedule/schedule.component.html
+++ b/src/app/schedule/schedule/schedule.component.html
@@ -1,1 +1,19 @@
-<p>schedule works!</p>
+<div class="schedule-container">
+    <div class="schedule-day">
+      <h2>28th September</h2>
+      <div class="event" *ngFor="let event of events28">
+        <h3>{{ event.title }}</h3>
+        <p>{{ event.time }}</p>
+        <p>{{ event.description }}</p>
+      </div>
+    </div>
+  
+    <div class="schedule-day">
+      <h2>29th September</h2>
+      <div class="event" *ngFor="let event of events29">
+        <h3>{{ event.title }}</h3>
+        <p>{{ event.time }}</p>
+        <p>{{ event.description }}</p>
+      </div>
+    </div>
+  </div>
