--- a/src/app/event/event/event.component.html
+++ b/src/app/event/event/event.component.html
@@ -8,7 +8,7 @@
         </p>
         <ng-template pTemplate="footer">
             <button
-            (click)="gotoHackathon()"
+            (click)="goto('events/hackathon')"
             class="animated-button" 
             icon="pi pi-check">Visit</button>
         </ng-template>
@@ -23,6 +23,7 @@
         </p>
         <ng-template pTemplate="footer">
             <button
+            (click)="goto('/events/contest')"
             class="animated-button" 
             icon="pi pi-check">Visit</button>
         </ng-template>
@@ -38,6 +39,7 @@
         </p>
         <ng-template pTemplate="footer">
             <button
+            (click)="goto('/tech-talks')"
             class="animated-button" 
             icon="pi pi-check">Visit</button>
         </ng-template>
