--- a/src/styles.css
+++ b/src/styles.css
@@ -3,14 +3,30 @@
 
 
 body{
-    padding: 0;
     margin: 0;
-    overflow: hidden;
+    overflow-y: scroll;
+    overflow-x: hidden;
     font-family: "Montserrat", sans-serif;
     font-optical-sizing: auto;
     font-weight: 700;
     font-style: italic;
+    height: 100%;
+    width: 100vw;
+    
 }
+
+body::-webkit-scrollbar {
+    width: 2px;
+  }
+  
+  body::-webkit-scrollbar-thumb {
+    background-color: darkgrey;
+    border-radius: 2px;
+  }
+  
+  body::-webkit-scrollbar-track {
+    background-color: lightgrey;
+  }
 
 
 /* Scroll bar properties */
