--- a/src/app/home/home/home.component.html
+++ b/src/app/home/home/home.component.html
@@ -1,6 +1,6 @@
 <div class="container">
     <div class="main-heading">
-        <h1>Experience The Future <br><span style="color: aqua;">Today</span></h1>
+        <h1>Experience The Future <br><span style="color: aqua;">Today !</span></h1>
     </div>
 
     <div class="clock" id="clock1">
